# lightweight_mapping

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~  ros_mono.cc  ros_stereo.cc  ros_stereo_kitti.cc  ros_stereo_kitti.cc~  ros_stereo_newCollege.cc  ros_stereo_offline.cc  ros_stereo_offline.cc~
config/: EuRoC_stereo_orginal.yaml  EuRoC_stereo_viconRoom.yaml  EuRoC_stereo_viconRoom.yaml~  Euroc.yaml  Euroc.yaml~  KITTI00-00.yaml~  KITTI00-07.yaml~  KITTI00.yaml  KITTI00.yaml~  KITTI01.yaml  KITTI01.yaml~  KITTI02.yaml  KITTI03.yaml  KITTI03.yaml~  KITTI04.yaml  KITTI04.yaml~  KITTI05.yaml  KITTI06.yaml  KITTI07.yaml  KITTI07.yaml~  KITTI08.yaml  KITTI09.yaml  KITTI09.yaml~  KITTI10.yaml  VI.yaml~  myVI.yaml  stereo_NewCollege.yaml  stereo_NewCollege.yaml~  stereo_RI.yaml~
launch/: Euroc_mono.launch  Euroc_stereo.launch~  Euroc_stereo_offline.launch  Euroc_stereo_offline.launch~  Euroc_stereo_offline_viconRoom.launch  VI.launch  stereo_offline_RI.launch~
src/: FColorMap.cpp  FColorMap.h  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrame.h  LocalMapping.cc  LocalMapping.h~  LocalMeshing.cc~  LocalMeshing.h  LoopClosing.cc  LoopClosing.h  Map.h  MapDrawer.cc  MapDrawer.h  MapPoint.cc  MapPoint.h  ORBextractor.cc  Optimizer.cc  System.cc  System.h~  Tracking.cc  Tracking.h  Viewer.cc  Viewer.h  dataStructure.h  mydatastructure.h~
src/delaunay/: CLB_IO.h  Exception.cpp  Exception.h  GraphWrapper_Boost.cc  GraphWrapper_Boost.h  Matrix.cc  Matrix.h  Matrix_vect_private.cc  StringFunctions.cpp  StringFunctions.h  lapack_declarations.h  lovimath.cc  lovimath.h
tools/: bin_vocabulary
